name:                todo
version:             0.0.1
synopsis:            My awesome todo-list app
homepage:            https://github.com/clearmediaukltd/haskell-website
license:             MIT
author:              Chris Cook
maintainer:          
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable todo
  main-is:             Main.hs
  -- other-modules:       
  build-depends:       base >=4.6.0
                     , wai
                     , warp
                     , http-types
                     , resourcet
                     , scotty
                     , text
                     , bytestring
                     , blaze-html
                     , persistent >=1.3.0
                     , persistent-template >=1.3.0
                     , persistent-sqlite >=1.3.0
                     , monad-logger >=0.3.0
                     , heroku
                     , transformers
                     , wai-middleware-static
                     , wai-extra
                     , time
